[2025-09-11] 친구 등록 기능 추가