@@ -1,68 +1,76 @@
 package com.realtime.chatting.config;
 
-import java.util.Arrays;
-import java.util.Collections;
+import lombok.RequiredArgsConstructor;
 
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
+import java.util.List;
+
 @Configuration
-@EnableWebSecurity
+@RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final JWTAuthenticationFilter jwtAuthenticationFilter;
+    private final JWTAuthenticationFilter jwtFilter;
 
-    public SecurityConfig(JWTAuthenticationFilter jwtAuthenticationFilter) {
-        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
-    }
-
+    //  CORS 설정 Bean
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-            .cors(Customizer.withDefaults())
-            .csrf(csrf -> csrf.ignoringRequestMatchers("/chat/**", "/api/**")) // 또는 전역 disable
-            .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/api/auth/**", "/chat/**").permitAll()
-                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                .anyRequest().authenticated()
-            )
-            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
-            .formLogin(AbstractHttpConfigurer::disable)
-            .httpBasic(AbstractHttpConfigurer::disable);
+    public CorsConfigurationSource corsConfigurationSource(@Value("${app.cors.allowed-origins:http://localhost:3000}") String allowedOrigins) {
 
-        return http.build();
-    }
+        // 쉼표로 여러 Origin 지정 가능: http://localhost:3000,http://127.0.0.1:3000
+        List<String> origins = Arrays.stream(allowedOrigins.split(","))
+                .map(String::trim)
+                .toList();
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration cfg = new CorsConfiguration();
+        CorsConfiguration config = new CorsConfiguration();
+        // setAllowedOrigins는 와일드카드 *와 credentials=true 함께 못 씀 > Origin을 명시적으로 나열
+        config.setAllowedOrigins(origins);
+        config.setAllowCredentials(true);
 
-        // 개발 포트 다양성 대비(React 3000, Vite 5173 등)
-        cfg.setAllowedOriginPatterns(
-            java.util.List.of("http://localhost:*", "http://127.0.0.1:*")
-        );
-        cfg.setAllowedMethods(java.util.List.of("GET","POST","PUT","DELETE","OPTIONS"));
-        cfg.setAllowedHeaders(java.util.List.of("*"));
-        cfg.setAllowCredentials(true);
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(Arrays.asList(
+                "Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"
+        ));
+        // 필요하면 노출 헤더 추가
+        config.setExposedHeaders(Arrays.asList("Authorization", "Location"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", cfg);
+        // 모든 경로에 대해 CORS 적용
+        source.registerCorsConfiguration("/**", config);
         return source;
     }
 
     @Bean
-    public BCryptPasswordEncoder encodePassword() {
-        return new BCryptPasswordEncoder();
+    public SecurityFilterChain filterChain(HttpSecurity http, @Qualifier("corsConfigurationSource") CorsConfigurationSource corsConfigurationSource) throws Exception {
+        http
+            .csrf(csrf -> csrf.disable())
+            // 위에서 등록한 CORS 소스를 사용
+            .cors(cors -> cors.configurationSource(corsConfigurationSource))
+            .authorizeHttpRequests(auth -> auth
+                // 프리플라이트는 무조건 통과
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                // 인증/회원가입
+                .requestMatchers("/api/auth/**").permitAll()
+                // STOMP 핸드셰이크
+                .requestMatchers("/ws/**").permitAll()
+                .anyRequest().authenticated()
+            )
+            .addFilterBefore(jwtFilter, org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter.class)
+            .httpBasic(h -> h.disable())
+            .formLogin(f -> f.disable());
+
+        return http.build();
     }
 }
